tests/ui/coercion/coerce-block-tail-57749.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-block-tail-57749.rs:33:14
   |
LL |     reset(&{ Homura });
   |              ^^^^^^ expected `u32`, found `Homura`
   |
help: consider dereferencing the type
   |
LL |     reset(&{ *Homura });
   |              +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
